--- a/AleoEvaluation/package.json
+++ b/AleoEvaluation/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@supabase/supabase-js": "^2.49.8",
+    "bcryptjs": "^3.0.2",
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
