--- a/AleoEvaluation/tsconfig.json
+++ b/AleoEvaluation/tsconfig.json
@@ -12,5 +12,8 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "jsx":"react-jsx", 
+    "allowImportingTsExtensions": true,//this works only with below noEmit set to true
+    "noEmit": true,
+    
   }
 }
