--- a/AleoEvaluation/package.json
+++ b/AleoEvaluation/package.json
@@ -19,7 +19,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.1"
+    "react-router-dom": "^7.6.1",
+    "terser-webpack-plugin": "^5.3.14"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
