--- a/permission_granterHack/.env
+++ b/permission_granterHack/.env
@@ -1,3 +1,3 @@
-PRIVATE_KEY="APrivateKey1zkp58f1TSTSXnbHNeT9c8vGrWp46TzH37wym5vuUQDcuTrv"
-NETWORK="testnet"
-ENDPOINT=https://capable.snarkos.net
+NETWORK=testnet
+PRIVATE_KEY=APrivateKey1zkp58f1TSTSXnbHNeT9c8vGrWp46TzH37wym5vuUQDcuTrv
+ENDPOINT=https://api.explorer.provable.com/v1
