--- a/AleoEvaluation/package.json
+++ b/AleoEvaluation/package.json
@@ -9,13 +9,17 @@
     "build:vite": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "install-leo": "./install.sh"
+    "install-leo": "./install.sh",
+    "start:api": "ts-node src/server/api.ts"
   },
   "dependencies": {
     "@provablehq/sdk": "^0.8.8",
     "@supabase/supabase-js": "^2.49.8",
     "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "comlink": "^4.4.2",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -28,7 +32,8 @@
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@types/babel__generator": "^7.6.8",
-    "@types/node": "^22.12.0",
+    "@types/cors": "^2.8.18",
+    "@types/node": "^22.15.29",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
@@ -45,7 +50,7 @@
     "style-loader": "^4.0.0",
     "svg-url-loader": "^8.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.3",
     "vite": "^6.1.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
