--- a/AleoEvaluation/tsconfig.json
+++ b/AleoEvaluation/tsconfig.json
@@ -2,7 +2,7 @@
   "include": ["src", "__tests__", "src/custom.d.ts"],
   "compilerOptions": {
     "outDir": "dist",
-    "target": "ES2015",
+    //"target": "ES2015",
     "moduleResolution": "Bundler",
     "strict": true,
     "skipLibCheck": true,
@@ -14,6 +14,11 @@
     "jsx":"react-jsx", 
     "allowImportingTsExtensions": true,//this works only with below noEmit set to true
     "noEmit": true,
+    "lib": [
+      "es2020", "esnext"
+    ],
+    "module": "commonjs",
+    "target": "es2020",
     
   }
 }
